<resources>
    <string name="app_name">projectDns</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="logout">Logout</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="fulltime">Full Time</string>
    <string name="location">Location\n</string>
    <string name="job_list">JOB LIST\n</string>
    <string name="search">Search</string>
    <string name="titile">Tittle</string>
    <string name="desc">Deskription</string>
    <string name="hello_blank_fragment">"Hallo "</string>

</resources>