<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fulltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fulltime"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="180dp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="231dp" />

    <SearchView
        android:layout_width="299dp"
        android:layout_height="23dp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="228dp" />

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:text="@string/apply_filter"
        android:textSize="10dp"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="258dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/button_onoff_indicator_on"
        tools:layout_editor_absoluteX="337dp"
        tools:layout_editor_absoluteY="180dp" />

</androidx.constraintlayout.widget.ConstraintLayout>