<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titile"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="193dp" />

    <TextView
        android:id="@+id/fulltime_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fulltime"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="249dp" />

    <TextView
        android:id="@+id/desc_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="308dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titile"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="222dp" />

    <TextView
        android:id="@+id/fulltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fulltime"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="280dp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="365dp"
        android:layout_height="308dp"
        android:text="@string/desc"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="339dp" />
</androidx.constraintlayout.widget.ConstraintLayout>